force-app/main/default/objects/Agent_Setting__mdt/fields/Brave_API_key__c.field-meta.xml
<CustomField>
    <fullName>Brave_API_key__c</fullName>
    <label>Brave API key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>