force-app/main/default/objects/Agent_Setting__mdt/fields/Slack_Bot_Token__c.field-meta.xml
<CustomField>
    <fullName>Slack_Bot_Token__c</fullName>
    <label>Slack Bot Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>